--- a/css/pages/services.sass
+++ b/css/pages/services.sass
@@ -2,8 +2,7 @@
   margin-top: 85px
 
 .partners
-  margin-top: 85px
-  //padding: 85px
+  padding: 1px 0 85px
   background: url("../images/bg_partners.jpg") no-repeat center top
   &__list
     margin: 80px -10px 0 -10px
@@ -27,7 +26,10 @@
     margin: auto 0
     max-width: 100%
     object-fit: contain
+  & .title
+    text-align: center
 
 .content__header
   margin-top: 35px
   text-align: center
+
