--- a/css/style.css
+++ b/css/style.css
@@ -398,11 +398,11 @@ ul {
 .slick-arrow {
   position: absolute;
   top: calc(50% - 100px);
-  -moz-transform: translateY(-50%);
-  -ms-transform: translateY(-50%);
-  -o-transform: translateY(-50%);
-  -webkit-transform: translateY(-50%);
-  transform: translateY(-50%);
+  -moz-transform: translateY(50%);
+  -ms-transform: translateY(50%);
+  -o-transform: translateY(50%);
+  -webkit-transform: translateY(50%);
+  transform: translateY(50%);
   cursor: pointer;
   border: none;
   background: none;
@@ -778,24 +778,71 @@ ul {
 }
 
 .form-input {
-  width: 100%;
   color: #ffffff;
   font-size: 18px;
-  margin-bottom: 20px;
-  padding: 0 10px;
+  padding: 20px 0;
+  background: inherit;
   border: none;
+  border-bottom: 1px solid #c4c4c4;
 }
 .form-input:focus {
   outline: none;
 }
-
-.modal-form__row label {
-  font-size: 1.3;
-  font-weight: 16px;
-  color: #000000;
+.form-input::placeholder {
+  font-family: ProximaNova, sans-serif;
+  font-size: 18px;
+  font-weight: 400;
   line-height: 1.5;
-  margin-bottom: 30px;
-  display: block;
+  color: #ffffff;
+}
+
+.callback {
+  padding: 85px 0;
+  background: url("../images/bg_callback_ind.jpg") no-repeat center top;
+}
+.callback h3 {
+  max-width: 950px;
+  font-size: 40px;
+  font-weight: 800;
+  line-height: 1.1;
+}
+.callback textarea {
+  padding-bottom: 15px;
+}
+.callback__input-wrapper {
+  display: flex;
+  flex-direction: column;
+}
+.callback__input-wrapper:first-child {
+  margin-right: 50px;
+  width: 45%;
+}
+.callback__input-wrapper:nth-child(2) {
+  width: calc(55% - 50px);
+}
+.callback__input-wrapper:last-child {
+  width: 100%;
+}
+.callback__submit-wrapper {
+  margin-top: 55px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+.callback__form {
+  margin-top: 30px;
+  display: flex;
+  flex-wrap: wrap;
+}
+.callback__add-file {
+  margin-top: 30px;
+}
+.callback .btn_submit {
+  width: 45%;
+}
+.callback__notice {
+  margin-left: 50px;
+  color: #ffffff;
 }
 
 @font-face {
@@ -1200,9 +1247,40 @@ ul {
   line-height: 1.15;
 }
 .services_page .services__image-block {
+  position: relative;
   -webkit-border-radius: 10px;
   -moz-border-radius: 10px;
   border-radius: 10px;
+}
+.services_page .services__info {
+  position: relative;
+}
+.services_page .services__info__first-row, .services_page .services__info__list, .services_page .services__info__button-wrapper {
+  z-index: 30;
+}
+.services_page .services__info::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 100%;
+  background: #1378BA;
+  z-index: 10;
+  bottom: 0;
+  -moz-transition: all 0.3s ease-in-out;
+  -o-transition: all 0.3s ease-in-out;
+  -webkit-transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
+}
+.services_page .services__info:hover::after {
+  top: -12px;
+}
+.services_page .services__info:hover .services__item__title, .services_page .services__info:hover .services__info__list__item {
+  color: #ffffff;
+}
+.services_page .services__info:hover .btn_small {
+  background-color: #ffffff;
+  border: 2px solid #ffffff;
 }
 
 .bg-text {
@@ -1418,6 +1496,7 @@ ul {
   -webkit-border-radius: 50%;
   -moz-border-radius: 50%;
   border-radius: 50%;
+  cursor: pointer;
 }
 .portfolio__pagination__btn.active {
   background: #29B179;
@@ -1496,7 +1575,7 @@ ul {
 }
 
 .partners {
-  margin-top: 85px;
+  padding: 1px 0 85px;
   background: url("../images/bg_partners.jpg") no-repeat center top;
 }
 .partners__list {
@@ -1532,6 +1611,9 @@ ul {
   margin: auto 0;
   max-width: 100%;
   object-fit: contain;
+}
+.partners .title {
+  text-align: center;
 }
 
 .content__header {
