monday morning commit

--- a/css/hamburger.sass
+++ b/css/hamburger.sass
@@ -1,7 +1,8 @@
 @import "prefixes"
 @import "variables"
 
-.header__hamburger, .headerNav_adaptive
+//.header__hamburger, .headerNav_adaptive
+.header__hamburger
   display: none
 
 .adaptive-menu-toggle
