--- a/css/pages/main.sass
+++ b/css/pages/main.sass
@@ -17,6 +17,19 @@
         content: url("../images/benef2.svg")
       &:nth-child(3)::before
         content: url("../images/benef3.svg")
+    &_complex
+      color: #ffffff
+      font-size: 20px
+      font-weight: 600
+      line-height: 1.3
+      &::before
+        margin-right: 35px
+      &:first-child::before
+        content: url("../images/icon_opyt.svg")
+      &:nth-child(2)::before
+        content: url("../images/icon_avtorskiy.svg")
+      &:nth-child(3)::before
+        content: url("../images/icon_sert_spec.svg")
 
 .services
   &__list
