--- a/css/prefixes.sass
+++ b/css/prefixes.sass
@@ -14,6 +14,10 @@
   display: flex
   flex-direction: column
 
+=flex-wrap()
+  display: flex
+  flex-wrap: wrap
+
 =space()
   display: flex
   justify-content: space-between
