--- a/css/variables.sass
+++ b/css/variables.sass
@@ -27,6 +27,9 @@ $notSoLightGray: #A3A3A3
 $lightGray: #c4c4c4
 $lightestGray: #F3F3F3
 $white: #ffffff
+$olive: #F3F1E7
+$pastelPink: #FEF4F4
+$pastelBlue: #F4F8FA
 $blue: #1378BA
 $green: #29B179
 
