pages no adaptive

--- a/css/blocks/modals.sass
+++ b/css/blocks/modals.sass
@@ -113,3 +113,22 @@
     margin-left: 50px
     color: #ffffff
 
+.notice_checked
+  position: absolute
+  z-index: -1
+  opacity: 0
+  &+label
+    display: inline-flex
+    align-items: center
+    user-select: none
+    &::before
+      content: ''
+      display: inline-block
+      width: 26px
+      height: 26px
+      border: 1px solid #adb5bd
+      background: #ffffff
+      +border-radius(50%)
+      margin-right: 0.5em
+  &:checked+label::before
+    content: url("../images/checkbox.svg")
